--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="contacto">
         <h2>Contacto</h2>
         <p>Email: jona@gmail.com</p>
-        <p>Telefone: +55 11 12345678</p>
+        <p>Telefono: +55 11 12345678</p>
+    </div>
 </body>
 </html>
